homepage - draft 1(fixing spacings)

--- a/TEMPLATES/assets/css/styles.css
+++ b/TEMPLATES/assets/css/styles.css
@@ -114,7 +114,7 @@ img, picture {
         justify-self: center;
         align-self: center;
         overflow: hidden;
-        padding: 5rem 2rem;
+        padding: 2rem 2rem;
     }
 
 
